--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,12 @@
 			<input type="text" id="login_password" placeholder="Password">
 			<br>
 			<button id="login_btn">Sign in</button>
+
+        
+        
+			<button id="Test_Auth">Test authentication</button>
+			
+			
 		</fieldset>
 		<hr>
 		<fieldset>
